fix(gamestart): fix blurred text in chrome

--- a/dev/scss/project/blocks/_game-start.scss
+++ b/dev/scss/project/blocks/_game-start.scss
@@ -20,7 +20,7 @@
 
 	&_modal {
 		@include size(300px, auto);
-		min-height: 250px;
+		min-height: 280px;
 		background-color: #e74c3c;
 		position: absolute;
 		right: -100%;
